fix jumping footer and other touchups

--- a/public/styles.css
+++ b/public/styles.css
@@ -46,7 +46,7 @@ input {
 
 .content {
   padding-left: 50px;
-  height: 78vh;
+  height: fit-content;
 }
 
 /* ---- Views ---- */
@@ -57,6 +57,7 @@ input {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: 71.5vh;
   overflow-y: scroll;
 }
 
@@ -69,7 +70,21 @@ h2 {
   margin: 20px 0px;
 }
 
+.single {
+ padding-left: 20px;
+}
+
 .single::before {
+  content: '';
+  background: transparent;
+  height: 10%;
+  width: 5px;
+  position: absolute;
+  left: 56px;
+  display: inline; 
+}
+
+.single:hover::before {
   content: '';
   background: var(--accent-1);
   height: 10%;
@@ -90,7 +105,6 @@ h2 {
 .create-blog,
 .update-blog {
   width: 100%;
-  height: 72vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,16 +113,17 @@ h2 {
 .create-blog > form,
 .update-blog > form {
   padding: 10vh 0;
-  gap: 2%;
+  gap: 5px;
   display: flex;
   flex-direction: column;
   max-width: 500px;
   min-width: 400px;
-  height: 100%;   
+  min-height: 80vh;   
 }
 
 textarea {
   padding-left: 2px;
+  margin-bottom: 5px;
   height: 30vh;
   background: var(--body-bkg);
   border: solid 1px var(--primary);
@@ -135,6 +150,10 @@ button#submit-blog:hover {
 }
 
 /* Details */
+
+.blog-details {
+  height: 77.125vh;
+}
 
 .blog-details-buttons {
  display: flex; 
@@ -194,7 +213,6 @@ button#delete:hover {
 .login-form-wrapper,
 .signup-form-wrapper {
   width: 100%;
-  height: 72vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -202,12 +220,12 @@ button#delete:hover {
 
 .login-form-wrapper > form,
 .signup-form-wrapper > form {
-  padding: 10vh 0;
-  gap: 2%;
+  padding-top: 10vh;
+  gap: 5px;
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 100%;
+  height: 80vh;
 }
 
 button#login,
@@ -222,6 +240,7 @@ button#signup {
   box-shadow: 2px 2px;
   max-width: 30%;
   height: 2.2em;
+  margin-top: 5px;
 }
 
 button#login:hover,
@@ -236,6 +255,7 @@ button#signup:hover {
 
 .about {
   max-width: 700px;
+  height: 77.125vh;
 }
 
 .about > h2 {
@@ -269,8 +289,9 @@ button#edit-about:hover{
 /* 404 */
 
 .not-found {
-  font-family: 'PT Sans', sans-serif;
-  font-size: 2em;
+  margin-top: 50px;
+  font-size: 1.5em;
+  height: 80vh;
 }
 
 /* ---- Partials ---- */
@@ -350,8 +371,9 @@ footer {
 /* Not authorized */
 
 .not-authorized {
-  margin: 50px 0 0 50px;
-  max-width: 700px;
+  margin-top: 50px;
+  max-width: 600px;
+  height: 72.9vh;
 }
 
 .not-authorized > p {
